[gd_scene load_steps=2 format=3 uid="uid://dckbbslnfj7dg"]

[ext_resource type="Script" uid="uid://cpflpjc0085tv" path="res://script/level.gd" id="1_s4405"]

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_s4405")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 34.0
offset_right = 1424.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 100
text = "Main Menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 450.0
offset_right = 1196.0
offset_bottom = 689.0
theme_override_constants/separation = 20

[node name="Level1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Level 1"

[node name="Level2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Level 2"

[node name="Level3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Level 3"
